--- a/addon/Dockerfile
+++ b/addon/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILD_VERSION
 ARG BUILD_ARCH
 
-FROM kamikac/leaf2mqtt:${BUILD_VERSION} AS build
+FROM brodiepeers/leaf2mqtt:${BUILD_VERSION} AS build
 FROM ghcr.io/hassio-addons/base/${BUILD_ARCH}:stable
 
 COPY --from=build / /
